# auto-trader

./: .env.example  .gitignore  CLAUDE.md  PERFORMANCE_IMPROVEMENTS.md  README.md  config.yaml.example  mypy.ini  package-lock.json  pyproject.toml  user_config.yaml  user_config.yaml.example
.github/workflows/: claude-code-review.yml
data/state/: position_registry.json
data/trade_plans/: sample_plans.yaml
docs/: architecture.md  brief.md  prd.md  ux-guidelines.md
docs/architecture/: checklist-results-report.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  execution-function-framework.md  high-level-architecture.md  ib-async-docs.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: epic-1-5-risk-management-advanced-interfaces.md  epic-1-foundation-trade-plan-management.md  epic-2-ibkr-integration-market-data.md  epic-3-trade-execution-engine.md  epic-4-notifications-persistence.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.project-setup-and-configuration.md  1.2.trade-plan-schema-and-validation.md  1.3.basic-trade-plan-creation.md  1.5.1.automated-position-sizing-risk-management.md  1.5.2.interactive-cli-creation-wizard.md  1.5.3.trade-plan-management-commands.md  2.1.ibkr-connection-management.md  2.2.market-data-subscription.md  2.3.order-execution-interface.md  (+2 more)
docs/ux-guidelines/: index.md  (+5 more)
scripts/: README_INTEGRATION_TESTS.md  run_integration_tests.sh  setup_integration_test_env.py  test_ibkr_market_data_integration.py
src/: config.py  config.yaml  main.py
(+188 files in other folders)
