[project]
name = "auto-trader"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "apscheduler==3.10.4",
    "click>=8.2.1",
    "httpx>=0.28.1",
    "ib-async>=2.0.1",
    "loguru>=0.7.3",
    "numpy==1.26.0",
    "pandas==2.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytz==2024.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.3",
    "mypy==1.11.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff==0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]
